RESOLVED FIXED285951
AX: [Site Isolation] Sites with multiple iframes don't initialize remote frames
https://bugs.webkit.org/show_bug.cgi?id=285951
Summary AX: [Site Isolation] Sites with multiple iframes don't initialize remote frames
Joshua Hoffman
Reported 2025-01-14 15:13:08 PST
If multiple iframes are present on a page, they are not added as remote elements to the AX tree.
Attachments
Joshua Hoffman
Comment 1 2025-01-14 15:13:18 PST
Radar WebKit Bug Importer
Comment 2 2025-01-14 15:13:19 PST
Joshua Hoffman
Comment 3 2025-01-14 15:14:05 PST
Joshua Hoffman
Comment 4 2025-01-14 22:15:48 PST
Joshua Hoffman
Comment 5 2025-01-15 07:42:21 PST
*** Bug 285952 has been marked as a duplicate of this bug. ***
EWS
Comment 6 2025-01-17 09:47:30 PST
Committed 289066@main (6a7216919d4b): <https://commits.webkit.org/289066@main> Reviewed commits have been landed. Closing PR #39055 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.